Fixed contrast on user interaction buttons

--- a/Testsite/CSS/Images/CSS/styles.css
+++ b/Testsite/CSS/Images/CSS/styles.css
@@ -767,12 +767,13 @@ width: 80%;
 
 .heart-icon, .skull-icon, .popcorn-icon {
     font-size: 24px;
-    opacity: 0.04;
+    opacity: 0.08;
     cursor: pointer;
     border: none;
     background-color: transparent;
     outline: none;
-    transition: 0.07s;
+    transition: all 0.02s ease-out;
+   
  
     margin-top: 3%; 
 }
